# expandpass

./: .gitignore  CMakeLists.txt  README.md  build.bat  example_seeds.txt  gen.cpp  makefile  readme  seed.txt  todo
src/: expand.cpp  expand.h  expandpass.cpp  expansion.cpp  expansion.h  parse.cpp  parse.h  sc_expandpass.cpp  sc_expandpass.h  util.cpp  util.h  validate.cpp  validate.h
tests/: .gitignore  gen_out.sh  run.sh
tests/args/: 6  7
tests/err/: 0  5  9
tests/in/: 1  10  11  12  13  14  15  16  17  18  19  2  4  5  6  7  8  9
